--- a/.env
+++ b/.env
@@ -1,19 +1,19 @@
 APP_NAME=Laravel
-APP_ENV=production
+APP_ENV=local
 APP_KEY=base64:g9YX5Y+NA/wWGJumWlaq1x78ngQk19c50/67ARCb0W0=
-APP_DEBUG=false
-APP_URL=basma_news_apis.onrender.com
+APP_DEBUG=true
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
 DB_CONNECTION=mysql
-DB_HOST=mysql.render.com
+DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=Basma_News
+DB_DATABASE=basma_news
 DB_USERNAME=root
-DB_PASSWORD=123
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
